--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "private": "true",
   "scripts": {
+    "prepare": "bun run scripts/download-ffmpeg.ts",
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@tauri-apps/cli": "^2",
+    "@types/bun": "^1.2.0",
     "typescript": "~5.6.2",
     "vite": "^6.0.3",
     "vite-plugin-solid": "^2.11.0"
