--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   },
   "license": "MIT",
   "dependencies": {
-    "solid-js": "^1.9.3",
     "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-opener": "^2"
+    "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-shell": "^2.2.0",
+    "solid-js": "^1.9.3"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
