--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@tailwindcss/vite": "^4.0.0",
     "@tauri-apps/cli": "^2",
     "@types/bun": "^1.2.0",
+    "tailwindcss": "^4.0.0",
     "typescript": "~5.6.2",
     "vite": "^6.0.3",
     "vite-plugin-solid": "^2.11.0"
