--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,4 +24,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-shell = "2"
 tauri-plugin-oauth = "2"
+tauri-plugin-http = "2.3.0"
+aes = "0.8.4"
+cbc = "0.1.2"
 
