--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@fabianlars/tauri-plugin-oauth": "2",
     "@fontsource-variable/lexend": "^5.1.2",
     "@logto/browser": "^3.0.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
