--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-router": "^7.1.5",
     "swr": "^2.3.2",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.4"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
