--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-dialog": "^2.2.0",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-shell": "^2.2.0",
     "@vitejs/plugin-react": "^4.3.4",
