--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,4 +28,7 @@ tauri-plugin-http = "2.3.0"
 aes = "0.8.4"
 cbc = "0.1.2"
 anyhow = "1.0.95"
+tauri-plugin-dialog = "2"
+bytes = "1.10.0"
+tauri-plugin-fs = "2"
 
