--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 VITE_LOGTO_ENDPOINT=<your-logto-endpoint>
 VITE_LOGTO_APP_ID=<your-application-id>
+BASE=https://lex.crux-bphc.com/api
+# Location to store the .m3u8 file. If this varies between OS-es then this cannot be an env variable
+M3U8_LOCATION=./
