--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,4 +27,5 @@ tauri-plugin-oauth = "2"
 tauri-plugin-http = "2.3.0"
 anyhow = "1.0.96"
 tauri-plugin-dialog = "2"
-
+bytes = "1.10.0"
+dotenv = "0.15.0"
