--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,8 +20,14 @@ tauri-build = { version = "2", features = [] }
 [dependencies]
 tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
+serde = { version = "1.0.218", features = ["derive"] }
+serde_json = "1.0.139"
 tauri-plugin-shell = "2"
 tauri-plugin-oauth = "2"
-
+tauri-plugin-http = "2.3.0"
+anyhow = "1.0.96"
+tauri-plugin-dialog = "2"
+bytes = "1.10.0"
+tokio = "1.43.0"
+dotenv = "0.15.0"
+tokio-util = "0.7.14"
