feat: Fine-grained percentage completion, fix .env var loading, other minor fixes & changes

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,5 +29,5 @@ anyhow = "1.0.96"
 tauri-plugin-dialog = "2"
 bytes = "1.10.0"
 tokio = "1.43.0"
-dotenv = "0.15.0"
 tokio-util = "0.7.14"
+dotenvy_macro = "0.15.7"
