--- a/biome.json
+++ b/biome.json
@@ -23,6 +23,9 @@
 			"correctness": {
 				"useExhaustiveDependencies": "off",
 				"noUnusedImports": "warn"
+			},
+			"suspicious": {
+				"noArrayIndexKey": "off"
 			}
 		}
 	},
