--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,7 +27,9 @@ tauri-plugin-oauth = "2"
 tauri-plugin-http = "2.3.0"
 anyhow = "1.0.96"
 tauri-plugin-dialog = "2"
-bytes = "1.10.0"
 tokio = "1.43.0"
-dotenv = "0.15.0"
 tokio-util = "0.7.14"
+dotenvy_macro = "0.15.7"
+dir-size = "0.1.1"
+log = "0.4.26"
+log4rs = "1.3.0"
