--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -1,4 +1,4 @@
-name: "publish"
+name: "build and publish"
 
 on: workflow_dispatch
 
@@ -69,10 +69,10 @@ jobs:
           envkey_VITE_LOGTO_ENDPOINT: ${{ secrets.VITE_LOGTO_ENDPOINT }}
           envkey_VITE_LOGTO_APP_ID: ${{ secrets.VITE_LOGTO_APP_ID }}
 
-      - name: setup node
-        uses: actions/setup-node@v4
+      - name: setup bun
+        uses: oven-sh/setup-bun@v2
         with:
-          node-version: lts/*
+          bun-version: 1.2.5
 
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
@@ -89,7 +89,7 @@ jobs:
         # You can remove the one that doesn't apply to your app to speed up the workflow a bit.
 
       - name: install frontend dependencies
-        run: yarn install # change this to npm, pnpm or bun depending on which one you use.
+        run: bun install # change this to npm, pnpm or bun depending on which one you use.
 
       - uses: tauri-apps/tauri-action@v0
         env:
