--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "multipartus-downloader",
-  "version": "0.1.0",
+  "version": "0.0.2",
   "description": "",
   "type": "module",
   "private": "true",
@@ -15,9 +15,9 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@fabianlars/tauri-plugin-oauth": "2",
-    "@fontsource-variable/lexend": "^5.1.2",
-    "@logto/browser": "^3.0.3",
+    "@fabianlars/tauri-plugin-oauth": "2.0.0",
+    "@fontsource-variable/lexend": "^5.2.6",
+    "@logto/browser": "^3.0.6",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-popover": "^1.1.6",
@@ -27,33 +27,33 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "1.1.8",
     "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-dialog": "^2.2.0",
+    "@tauri-apps/plugin-dialog": "^2.2.1",
     "@tauri-apps/plugin-http": "^2.3.0",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-shell": "^2.2.0",
     "@vitejs/plugin-react": "^4.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "1.0.0",
-    "jotai": "^2.12.0",
+    "cmdk": "^1.1.1",
+    "jotai": "^2.12.2",
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.1.5",
-    "tailwind-merge": "^3.0.1",
+    "react-router": "^7.4.1",
+    "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.4"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@tailwindcss/vite": "^4.0.0",
+    "@tailwindcss/vite": "^4.1.0",
     "@tauri-apps/cli": "^2",
     "@types/bun": "^1.2.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^4.1.0",
     "typescript": "~5.6.2",
-    "vite": "^6.0.3",
+    "vite": "^6.2.4",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
