--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ BASE=https://lex.crux-bphc.com/api
 VITE_REMOTES='["https://bitshyd.impartus.com", "http://172.16.3.20"]'
     # "http://43.204.79.200" - Fails always - It appears that this internally uses bitshyd.impartus.com
     # "https://a.impartus.com" - Same for this
+
+# How many times the downloader must retry the download before failing
+# Applies to all parts of the download operation
+MAX_RETRY_COUNT=3
