--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
 VITE_LOGTO_ENDPOINT=<your-logto-endpoint>
 VITE_LOGTO_APP_ID=<your-application-id>
 BASE=https://lex.crux-bphc.com/api
+# Does the IP of `https://bitshyd.impartus.com` change regularly?
+VITE_REMOTES='["https://bitshyd.impartus.com", "http://172.16.3.20"]'
+    # "http://43.204.79.200" - Fails always - It appears that this internally uses bitshyd.impartus.com
+    # "https://a.impartus.com" - Same for this
+
+# How many times the downloader must retry the download before failing
+# Applies to all parts of the download operation
+MAX_RETRY_COUNT=3
