--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,7 +22,7 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1.0.218", features = ["derive"] }
 serde_json = "1.0.139"
-tauri-plugin-shell = "2"
+tauri-plugin-shell = "2.2.1"
 tauri-plugin-oauth = "2"
 tauri-plugin-http = "2.3.0"
 anyhow = "1.0.96"
@@ -31,5 +31,6 @@ tokio = "1.43.0"
 tokio-util = "0.7.14"
 dotenvy_macro = "0.15.7"
 dir-size = "0.1.1"
-log = "0.4.26"
-log4rs = "1.3.0"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
+tracing-appender = "0.2.3"
