--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "jotai": "^2.12.2",
-    "lucide-react": "^0.474.0",
+    "lucide-react": "^0.487.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.1",
-    "tailwind-merge": "^3.1.0",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.4"
   },
@@ -51,7 +53,7 @@
     "@types/bun": "^1.2.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "tailwindcss": "^4.1.0",
+    "tailwindcss": "^4.1.3",
     "typescript": "~5.6.2",
     "vite": "^6.2.4",
     "vite-tsconfig-paths": "^5.1.4"
